<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete"
        android:contentDescription="@string/action_menu_delete"
        android:icon="@drawable/ic_delete"
        android:iconTint="?attr/colorOnSecondary"
        android:orderInCategory="100"
        android:title="@string/action_menu_delete"
        app:showAsAction="always" />

</menu>